kubernetes/guestbook/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS" # this is the case where a container accept HTTPS
  name: guestbook
  namespace: default
spec:
  #  this is in case SSL termination happens at nginx ingress controller
  # tls:
  # - hosts:
  #   - a92226b56ed6548beaae3bcc7e3b9a5c-997944382.ap-northeast-1.elb.amazonaws.com
  #   secretName: tls-secret
  rules:
    - http:
        paths:
          - backend:
              service:
                name: guestbook
                port:
                  number: 80
            path: /
            pathType: Prefix
